pages/globals.css
* {
  box-sizing: border-box;
}

@font-face {
  font-family: "Cartridge";
  src: url("/fonts/Cartridge/Cartridge-Regular.ttf");
  font-style: normal;
  font-weight: 500;
  letter-spacing: 0%;
}

html,
body {
  padding: 0;
  margin: 0;
  max-height: 100vh;
  font-feature-settings: "ss01";
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.react-autosuggest__input {
  width: 280px;
  height: 30px;
  padding: 10px 20px;
  font-family: Helvetica, sans-serif;
  font-weight: 300;
  font-size: 16px;
  border: 1px solid #aaa;
  border-radius: 4px;
  align-self: center;
}

.react-autosuggest__input:focus {
  outline: none;
}

.react-autosuggest__container--open .react-autosuggest__input {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.react-autosuggest__suggestions-container {
  display: none;
}

.react-autosuggest__container--open .react-autosuggest__suggestions-container {
  display: block;
  position: absolute;
  top: 51px;
  width: 280px;
  border: 1px solid #aaa;
  background-color: #fff;
  font-family: Helvetica, sans-serif;
  font-weight: 300;
  font-size: 16px;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  z-index: 999;
}

.react-autosuggest__suggestions-list {
  margin: 0;
  padding: 0;
  list-style-type: none;
}

.react-autosuggest__suggestion {
  cursor: pointer;
  padding: 2px 5px;
}

.react-autosuggest__suggestion:not(:first-child) {
  border-top: 1px solid #ddd;
}

.react-autosuggest__suggestion--focused {
  background-color: #0c7eaf;
  color: #fff;
}

.react-autosuggest__suggestions-container--open {
  /* display: block; */
  position: relative;
  margin: 0 auto;
  margin-top: 47vh;
  height: 400px;
  overflow-y: scroll;
}

